@@ -34,6 +34,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6118: urllib.parse.quote_plus ignored the encoding and errors
+  arguments for strings with a space in them.
+
 - In unittest, using a skipping decorator on a class is now equivalent to
   skipping every test on the class.  The ClassTestSuite class has been removed.
 
